update for favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ras Kucing</title>
+    <title>Klasifikasi Ras Kucing</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
@@ -153,4 +154,4 @@
         <textarea class="w-full mt-4 bg-white border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:border-blue-500" rows="6" placeholder="Pesan Anda"></textarea>
         <button type="submit" class="mt-4 bg-blue-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Kirim Pesan</button>
       </form>
-   
+
